[package]
name = "scr-to-svg"
version = "0.4.0"
authors = ["Mano Ségransan <mano.segransan@protonmail.com>"]
edition = "2021"
license = "GPLv3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
lazy_static = "1.4.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
ndarray = "0.15.6"
svg = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
